validator_derive_tests/tests/compile-fail/no_validations.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate()]
    s: String,
}

fn main() {}
