validator_derive_tests/tests/compile-fail/no_validations.stderr
error: Invalid attribute #[validate] on field `s`: it needs at least one validator
 --> $DIR/no_validations.rs:5:5
  |
5 |     #[validate()]
  |     ^^^^^^^^^^^^^
